--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,31 @@ python-multipart>=0.0.6
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 
-# Optional: Uncomment for RAG features
-# langchain>=0.1.0
-# langchain-google-genai>=0.0.6
-# chromadb>=0.4.0
-# sentence-transformers>=2.2.0
-# spacy>=3.7.0
-# scikit-learn>=1.3.0
-# PyMuPDF>=1.23.0
-# numpy>=1.24.0
+# RAG-specific dependencies
+# Install with: pip install -r requirements-rag.txt
+langchain-text-splitters
+langchain>=0.1.0
+langchain-google-genai>=0.0.6
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
+spacy>=3.7.0
+scikit-learn>=1.3.0
+PyMuPDF>=1.23.0
+numpy>=1.24.0
+qdrant-client>=1.6.0
+rank-bm25>=0.2.2
+underthesea>=6.0.0  # Cho tokenization tiếng Việt
+sentence-transformers>=2.2.2
+
+# Voice/Speech-to-Text dependencies
+groq>=0.4.0
+pyaudio>=0.2.13
+numpy>=1.24.0
+pydub>=0.25.1
+noisereduce>=3.0.0
+
+# Optional: for better audio processing
+scipy>=1.11.0
+langdetect
+google-genai
+elevenlabs
