--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pydantic-settings>=2.1.0
 sqlalchemy>=2.0.0
 asyncpg>=0.29.0
 alembic>=1.13.0
-psycopg[binary]>=3.1.0
+psycopg2-binary>=2.9.0
 
 # Utilities
 python-multipart>=0.0.6
