--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,27 @@
-# ======================
-# FastAPI Application
-# ======================
-PROJECT_NAME=FastAPI Todo
+PROJECT_NAME=Chat-speech
 API_V1_PREFIX=/api/v1
 DEBUG=False
 
-# ======================
-# Database Configuration
-# ======================
+PYTHONPATH = 'yourpath'
+ 
+# Database config
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-POSTGRES_DB=todo_db
-POSTGRES_USER=todo_user
-POSTGRES_PASSWORD=todo_pass
+POSTGRES_DB=dbname
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+SQLALCHEMY_DATABASE_URL = "postgresql://user:password@localhost:5432/dbname"
 
-# Optional: Full database URL override
-# DATABASE_URL=postgresql+asyncpg://user:pass@host:port/dbname
-
-# ======================
-# LLM Configuration (for RAG - not used yet)
-# ======================
-# Gemini API
+# LLM Config
 GEMINI_API_KEY=
-
-# Qwen API
 QWEN_API_KEY=
-
-# Ollama (local)
 OLLAMA_BASE_URL=http://localhost:11434
+
+# Speech-to-Text Config
+GROQ_API_KEY=
+ELEVEN_API_KEY=
+
+# Vectir database config
+QDRANT_HOST=http://localhost:6333
+
+PYTHONUTF8 = 1
