--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,94 @@
 version: "3.9"
+
 services:
+  # PostgreSQL Database
   db:
     image: postgres:16-alpine
+    container_name: chat-postgres
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-chat_db}
+      POSTGRES_USER: ${POSTGRES_USER:-chat_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-chat_password}
+      LANG: C.UTF-8
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U todo_user -d todo_db"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+    # healthcheck:
+    #   test: ["CMD-SHELL", "ls ./storage/raft_state.json || exit 1"]
+    #   interval: 5s
+    #   timeout: 5s
+    #   retries: 10
+    networks:
+      - app-network
 
+  # Qdrant Vector Database
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: chat-qdrant
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - qdrant_storage:/qdrant/storage
+    environment:
+      - QDRANT__SERVICE__HTTP_PORT=6333
+      - QDRANT__SERVICE__GRPC_PORT=6334
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
+
+  # FastAPI Application
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: chat-api
     env_file:
       - .env
+    environment:
+      - POSTGRES_HOST=db
+      - QDRANT_URL=http://qdrant:6333
     depends_on:
       db:
-        condition: service_healthy
+        condition: service_started
+      qdrant:
+        condition: service_started
     ports:
       - "8000:8000"
+    volumes:
+      - ./data:/app/data
+      - ./logs:/app/logs
     command: >
       sh -c "alembic upgrade head &&
-             uvicorn app.main:app --host 0.0.0.0 --port 8000"
+             uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
+    networks:
+      - app-network
 
+  # PgAdmin (Optional)
   pgadmin:
     image: dpage/pgadmin4
+    container_name: chat-pgadmin
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@example.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
     ports:
       - "8080:80"
     depends_on:
       - db
+    networks:
+      - app-network
 
 volumes:
   pgdata:
+    driver: local
+  qdrant_storage:
+    driver: local
+
+networks:
+  app-network:
+    driver: bridge
